55 & 56. modified get all posts endpoint to support pagination